plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.github.bjornvester.xjc' version '1.8.2'
}

group = 'com.bankaya'
version = '0.0.1-SNAPSHOT'
description = 'SOAP Web Service to consume PokeAPI - Challenge Bankaya'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }

    // Excluir dependencias conflictivas
    configureEach {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
        exclude group: 'ch.qos.logback', module: 'logback-classic'
        exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web-services'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.springframework.ws:spring-ws-test'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // JAXB para SOAP
    implementation 'com.sun.xml.bind:jaxb-impl:4.0.6'
    implementation 'wsdl4j:wsdl4j:1.6.3'

    // MapStruct
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    // Caffeine Cache
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
}

test {
    useJUnitPlatform()
    jvmArgs(
            "-Xshare:off",  // Disable CDS to avoid warning with javaagent
            "-XX:+EnableDynamicAgentLoading"  // Suppress dynamic agent loading warning
    )
}

bootJar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

// JAXB Configuration - Generate classes from XSD
xjc {
    xsdDir = file("${projectDir}/src/main/resources/xsd")
    outputJavaDir = layout.buildDirectory.dir("generated-sources/jaxb")
}

